# dhart-utils

./: .dockerignore  .gitignore  ACCESSION.txt  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  R-normalization.R  README.md  TODO.md  accession.py  requirements.txt  runjob  setup.cfg  wrangling.py
data/: ACCESSION.txt  homo_sapiens_RNAseq.bib  homo_sapiens_scRNAseq.bib  mus_musculus_scRNAseq.bib
dependencies/: R-dependencies.r  requirements.txt
docker/accession/: Dockerfile
docker/wrangling/: Dockerfile
src/dhartutils/: accession.py  wrangling.py
src/dhartutils/utils/: data_utils.py  geo_utils.py
utils/: data_utils.py  geo_utils.py  utils.py
