[metadata]
name = dhartutils
description = "Tools for data retrieval and wrangling for the DHART (Digital HeART) portal."
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: dhartutils.__version__
url = https://github.com/eboileau/dhart-utils
author = Etienne Boileau
maintainer = Etienne Boileau
maintainer_email = boileau@uni-heidelberg.de
license = BSD-3-Clause
keywords = dhart-utils
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
# see requirements.txt for pinned versions
install_requires =
    pysradb
    scikit-learn
    scanpy
    numpy
    scipy
    tables
    h5py
    anndata
    pandas
    mygene
    rpy2

python_requires = >=3.9
include_package_data = True
zip_safe = False

# [options.extras_require]
# test =
#     pytest
#     pytest-cov

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    accession = dhartutils.accession:main
    wrangling = dhartutils.wrangling:main
